<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg">

        <LinearLayout
            style="@style/login_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_block"
            android:orientation="vertical">

            <include layout="@layout/logo_view" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/loginBtn"
                style="@style/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_btn"
                android:enabled="false"
                android:focusable="true"
                android:text="@string/button_login" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>



