<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/person_block"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="#FFF"
        android:src="@mipmap/w99"
        android:id="@+id/weatherIcon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/header_text"
            android:text="未知天气"
            android:id="@+id/weatherText"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_label" />

            <TextView
                android:id="@+id/credit"
                style="@style/header_text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrow_label" />

            <TextView
                android:id="@+id/has_borrow"
                style="@style/header_text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <TextView
                style="@style/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/ncount_label" />

            <TextView
                android:id="@+id/all_borrow"
                style="@style/header_text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
